test/pos/real00.smt2_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints


; Horn constraints
(constraint (forall ((xZero unknown [given FReal])(xOne unknown [given FReal])(v1 Int)) (=> (and (= xZero 0.00000) (and (= xOne 1.00000) True)) (not (= xZero xOne)))))
